--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,9 +3,9 @@ name: CI
 on:
   workflow_dispatch:
     inputs:
-      environment:
-        type: environment
-        description: Select the environment
+#       environment:
+#         type: environment
+#         description: Select the environment
       boolean:
         type: boolean
         description: True or False
