--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,29 +3,28 @@ name: CI
 on:
   workflow_dispatch:
     inputs:
-#       environment:
-#         type: environment
-#         description: Select the environment
-      boolean:
-        type: boolean
-        description: True or False
-      choice:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning' 
         type: choice
-        description: Make a choice
         options:
-        - foo
-        - bar
-        - baz
+        - info
+        - warning
+        - debug 
+      tags:
+        description: 'Test scenario tags'
+        required: false 
+        type: boolean
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true 
+
 jobs:
-  build:
+  print-tag:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: greet
-        run: | 
-          echo "environment is ${{ github.event.inputs.environment }}"
-          echo "boolean is ${{ github.event.inputs.boolean }}"
-          echo "choice is ${{ github.event.inputs.choice }}"
-          
+      - name: Print the input tag to STDOUT
+        run: echo  The tag is ${{ github.event.inputs.tag }} echo  The tags are ${{ github.event.inputs.tags }} 
